--- a/src/component/item.css
+++ b/src/component/item.css
@@ -32,14 +32,47 @@
   background-color: #0056b3;
 }
 
-.search-container {
-  margin-bottom: 20px;
+.container-edit {
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  box-shadow: 0px 0px 5px rgb(167, 167, 167);
+  margin-top: 10px;
 }
 
-.search-input {
-  width: 100%;
-  padding: 10px;
+.form-edit {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 0px 5px rgb(167, 167, 167);
+  margin-bottom: 0px;
+  padding-top: 10px;
+}
+
+.inline-edit {
+  display: inline-flex;
+  justify-content: space-between;
+  margin: 10px;
+  height: 30px;
+}
+
+.input-edit {
+  width: 80%;
   border-radius: 5px;
-  border: 1px solid #ccc;
-  font-size: 16px;
+}
+
+.save-cancel-edit {
+  background-color: whitesmoke;
+  width: 100%;
+  display: inline-flex;
+  padding: 5px;
+  margin: 5px;
+  margin-left: 0px;
+  margin-bottom: 0px;
+  box-shadow: 0px 0px 5px rgb(167, 167, 167);
+}
+
+.button-save {
+  margin-right: 10px;
 }
